--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -59,8 +59,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/amd64, linux/arm64/v8, linux/ppc64le
+          platforms: linux/amd64, linux/arm64/v8, linux/ppc64le, linux/386
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            type=raw,value=14-3_1
           labels: ${{ steps.meta.outputs.labels }}
 
