--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,7 @@ jobs:
         with:
           file: alpine/Dockerfile
           context: ./
-          platforms: linux/amd64, linux/arm64/v8
+          platforms: linux/arm64/v8, linux/ppc64le
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
