--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
       - name: Log into dockerhub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
@@ -52,7 +50,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract Docker metadata for main
-        if: github.ref == 'refs/heads/main'
+        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
         id: meta-main
         uses: docker/metadata-action@v4
         with:
@@ -64,7 +62,7 @@ jobs:
             type=schedule,enable=true,priority=1000,prefix=,suffix=,pattern=nightly
 
       - name: Extract Docker metadata for latest
-        if: github.ref == 'refs/heads/${{ env.LATEST }}'
+        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/${{ env.LATEST }}'
         id: meta-latest
         uses: docker/metadata-action@v4
         with:
@@ -87,8 +85,6 @@ jobs:
             type=ref,event=branch,enable=true
             type=schedule,enable=false,priority=1000,prefix=,suffix=,pattern=nightly
 
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
