--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Get branch release version
+        run: echo "BRANCH=${GITHUB_REF/refs\//}" >> $GITHUB_ENV
+
       - name: Log into dockerhub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
@@ -50,7 +53,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract Docker metadata for main
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         id: meta-main
         uses: docker/metadata-action@v4
         with:
@@ -62,7 +65,7 @@ jobs:
             type=schedule,enable=true,priority=1000,prefix=,suffix=,pattern=nightly
 
       - name: Extract Docker metadata for latest
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/${{ env.LATEST }}'
+        if: github.ref == 'test'
         id: meta-latest
         uses: docker/metadata-action@v4
         with:
