--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,9 +42,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Get branch release version
-        run: echo "BRANCH=${GITHUB_REF/refs\//}" >> $GITHUB_ENV
-
       - name: Log into dockerhub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
@@ -65,7 +62,7 @@ jobs:
             type=schedule,enable=true,priority=1000,prefix=,suffix=,pattern=nightly
 
       - name: Extract Docker metadata for latest
-        if: github.ref == 'test'
+        if: github.ref == 'refs/heads/${{ env.LATEST }}'
         id: meta-latest
         uses: docker/metadata-action@v4
         with:
