--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: '19 17 * * *'
   push:
-    branches: [ main, 15-3.3, 14-3.3 ]
+    branches: [ main, 14-3.3, 15-3.3 ]
   pull_request:
     branches: [ main ]
 
@@ -74,7 +74,7 @@ jobs:
             type=schedule,enable=false,priority=1000,prefix=,suffix=,pattern=nightly
 
       - name: Extract Docker metadata for other
-        if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/${{ env.LATEST }}'
+        if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/$LATEST'
         id: meta-other
         uses: docker/metadata-action@v4
         with:
