--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,27 +111,6 @@ jobs:
             echo "keepgoing=true" >> $GITHUB_ENV
           fi
 
-      - name: Build Branch Container
-        if: ${{ env.keepgoing == 'true' }} && github.ref != 'refs/heads/main'
-        env:
-          recipe: ${{ matrix.recipe }}
-        run: |
-         ls
-         if [ -f "${{ matrix.recipe }}" ]; then
-            sudo -E singularity build container.sif ${{ matrix.recipe }}
-            tag=$(echo "${recipe/Singularity\./}")
-            if [ "$tag" == "Singularity" ]; then
-                tag=latest
-            fi
-            # Build the container and name by tag
-            echo "Tag is $tag."
-            echo "tag=$tag" >> $GITHUB_ENV
-         else
-           echo "${{ matrix.recipe }} is not found."
-           echo "Present working directory: $PWD"
-           ls
-         fi
-
       - name: Build Latest Container
         if: ${{ env.keepgoing == 'true' }} && github.ref == 'refs/heads/$LATEST'
         env:
@@ -186,6 +165,7 @@ jobs:
 
   singularity-branch:
     needs: docker
+    if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
     container:
       image: quay.io/singularity/singularity:v3.10.4
