--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  docker:
+  docker-latest:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -49,9 +49,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract Docker metadata for latest
+      - name: Extract Docker metadata
         if: github.ref == 'refs/heads/$LATEST'
-        id: meta-latest
+        id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -63,9 +63,41 @@ jobs:
             type=ref,event=tag
             type=ref,event=pr
 
-      - name: Extract Docker metadata for other
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          platforms: linux/amd64, linux/arm64/v8, linux/ppc64le
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          
+  docker-other:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log into dockerhub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract Docker metadata
         if: github.ref != 'refs/heads/$LATEST'
-        id: meta-other
+        id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -86,7 +118,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
   
   singularity:
-    needs: docker
+    needs: docker-latest
     runs-on: ubuntu-latest
     container:
       image: quay.io/singularity/singularity:v3.10.4
@@ -135,7 +167,7 @@ jobs:
             fi
 
   singularity-branch:
-    needs: docker
+    needs: docker-other
     runs-on: ubuntu-latest
     container:
       image: quay.io/singularity/singularity:v3.10.4
