turn back on branches

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: '19 17 * * *'
   push:
-    branches: [ main ]
+    branches: [ main, 14-3.3, 15-3.3 ]
   pull_request:
     branches: [ main ]
 
