--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,55 +117,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
   
   singularity:
-    needs: docker-latest
-    runs-on: ubuntu-latest
-    container:
-      image: quay.io/singularity/singularity:v3.10.4
-    strategy:
-      fail-fast: false
-      matrix:
-        recipe: ["Singularity"]
-    steps:
-      - name: Check out code for the container build
-        uses: actions/checkout@v3
-      - name: Continue if Singularity Recipe Exists
-        run: |
-          if [[ -f "${{ matrix.recipe }}" ]]; then
-            echo "keepgoing=true" >> $GITHUB_ENV
-          fi
-
-      - name: Build Latest Container
-        if: github.ref == 'refs/heads/15-3.3'
-        env:
-          recipe: ${{ matrix.recipe }}
-        run: |
-         ls
-         if [ -f "${{ matrix.recipe }}" ]; then
-            sudo -E singularity build container.sif ${{ matrix.recipe }}
-            tag=$(echo "${recipe/Singularity\./}")
-            if [ "$tag" == "Singularity" ]; then
-                tag=latest
-            fi
-            # Build the container and name by tag
-            echo "Tag is $tag."
-            echo "tag=$tag" >> $GITHUB_ENV
-         else
-           echo "${{ matrix.recipe }} is not found."
-           echo "Present working directory: $PWD"
-           ls
-         fi
-
-      - name: Login and Deploy Container
-        if: (github.event_name != 'pull_request')
-        env:
-          keepgoing: ${{ env.keepgoing }}
-        run: |         
-            if [[ "${keepgoing}" == "true" ]]; then
-                echo ${{ secrets.GITHUB_TOKEN }} | singularity remote login -u ${{ secrets.GHCR_USERNAME }} --password-stdin oras://ghcr.io
-                singularity push container.sif oras://ghcr.io/${GITHUB_REPOSITORY}:${tag}
-            fi
-
-  singularity-branch:
     needs: [docker-latest, docker-other]
     if: |
       always()
@@ -181,14 +132,17 @@ jobs:
     steps:
       - name: Check out code for the container build
         uses: actions/checkout@v3
-      - name: Continue if Singularity Recipe Exists
+
+      - name: Continue if Singularity recipe exists
         run: |
           if [[ -f "${{ matrix.recipe }}" ]]; then
             echo "keepgoing=true" >> $GITHUB_ENV
           fi
-      - name: Get Build Release version
+
+      - name: Get name of tag
         run: echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
-      - name: Build Branch Container
+
+      - name: Create tag for Singularity
         if: ${{ env.keepgoing == 'true' }}
         env:
           recipe: ${{ matrix.recipe }}
@@ -209,6 +163,10 @@ jobs:
            ls
          fi
 
+      - name: Update Singularity file tag
+        run: |
+          sed -i "s/latest/$tag/" ./Singularity
+
       - name: Login and Deploy Container
         if: (github.event_name != 'pull_request')
         env:
@@ -217,4 +175,14 @@ jobs:
             if [[ "${keepgoing}" == "true" ]]; then
                 echo ${{ secrets.GITHUB_TOKEN }} | singularity remote login -u ${{ secrets.GHCR_USERNAME }} --password-stdin oras://ghcr.io
                 singularity push container.sif oras://ghcr.io/${GITHUB_REPOSITORY}:${tag}
+            fi
+
+      - name: Login and Deploy Latest Container
+        if: github.ref == 'refs/heads/15-3.3'
+        env:
+          keepgoing: ${{ env.keepgoing }}
+        run: |
+            if [[ "${keepgoing}" == "true" ]]; then
+                echo ${{ secrets.GITHUB_TOKEN }} | singularity remote login -u ${{ secrets.GHCR_USERNAME }} --password-stdin oras://ghcr.io
+                singularity push container.sif oras://ghcr.io/${GITHUB_REPOSITORY}:latest
             fi
