--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,12 +31,15 @@ jobs:
       contents: read
       packages: write
 
-    if: github.ref == 'refs/heads/15-3.3'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Get branch name
+        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
       - name: Set up QEMU
+        if: emv.BRANCH == env.LATEST
         id: qemu
         uses: docker/setup-qemu-action@v2
 
@@ -77,12 +80,15 @@ jobs:
       contents: read
       packages: write
 
-    if: github.ref != 'refs/heads/15-3.3'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Get branch name
+        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
       - name: Set up QEMU
+        if: emv.BRANCH == env.LATEST
         id: qemu
         uses: docker/setup-qemu-action@v2
 
@@ -139,8 +145,8 @@ jobs:
             echo "keepgoing=true" >> $GITHUB_ENV
           fi
 
-      - name: Get name of tag
-        run: echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
+      - name: Get branch name
+        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
       - name: Create tag for Singularity
         if: ${{ env.keepgoing == 'true' }}
@@ -152,7 +158,7 @@ jobs:
             sudo -E singularity build container.sif ${{ matrix.recipe }}
             tag=$(echo "${recipe/Singularity\./}")
             if [ "$tag" == "Singularity" ]; then
-                tag=$TAG
+                tag=$BRANCH
             fi
             # Build the container and name by tag
             echo "Tag is $tag."
