--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract Docker metadata
+      - name: Extract Docker metadata for latest release
+        if: env.BRANCH == env.LATEST
+        id: meta-latest
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=true
+          tags: |
+            type=ref,event=branch,enable=true
+            type=schedule,enable=false,pattern=nightly
+            type=ref,event=tag
+            type=ref,event=pr
+
+      - name: Extract Docker metadata for other releases
         if: env.BRANCH != env.LATEST
         id: meta
         uses: docker/metadata-action@v4
@@ -70,7 +84,7 @@ jobs:
             type=ref,event=tag
             type=ref,event=pr
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image for other releases
         if: env.BRANCH != env.LATEST
         uses: docker/build-push-action@v3
         with:
@@ -78,65 +92,18 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-  
-  docker-latest:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Get branch name
-        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
-
-      - name: Set up QEMU
-        if: env.BRANCH == env.LATEST
-        id: qemu
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        if: env.BRANCH == env.LATEST
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log into dockerhub
-        if: env.BRANCH == env.LATEST
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Extract Docker metadata
-        if: env.BRANCH == env.LATEST
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          flavor: |
-            latest=true
-          tags: |
-            type=ref,event=branch,enable=true
-            type=schedule,enable=false,pattern=nightly
-            type=ref,event=tag
-            type=ref,event=pr
-
-      - name: Build and push Docker image
+          
+      - name: Build and push Docker image for latest release
         if: env.BRANCH == env.LATEST
         uses: docker/build-push-action@v3
         with:
           platforms: linux/amd64, linux/arm64/v8, linux/ppc64le
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-latest.outputs.tags }}
+          labels: ${{ steps.meta-latest.outputs.labels }}
  
   singularity:
-    needs: [docker, docker-latest]
-    if: |
-      always()
-      && contains(needs.*.result, 'success')
-      && !contains(needs.*.result, 'failure')
+    needs: docker
     runs-on: ubuntu-latest
     container:
       image: quay.io/singularity/singularity:v3.10.4
