--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,16 +40,14 @@ jobs:
         run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
       - name: Set up QEMU
-        if: env.BRANCH != env.LATEST
         id: qemu
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        if: env.BRANCH != env.LATEST
         uses: docker/setup-buildx-action@v2
 
       - name: Log into dockerhub
-        if: env.BRANCH != env.LATEST
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
