--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ POSTGRES_PASSWORD=postgres
 PG_PARSE_USER=parse
 PG_PARSE_PASSWORD=parse
 PG_PARSE_DB=parse_hipaa
+PMM_USER=pmm
+PMM_PASSWORD=pmm
+PMM_PORT=80
+PMM_TLS_PORT=443
