--- a/general.env
+++ b/general.env
@@ -2,3 +2,8 @@ export POSTGRES_PASSWORD=postgres
 export PG_PARSE_USER=parse
 export PG_PARSE_PASSWORD=parse
 export PG_PARSE_DB=parse_hipaa
+export PMM_USER=pmm
+export PMM_PASSWORD=pmm
+export PMM_PORT=80
+export PMM_TLS_PORT=443
+export DB_PORT=5432
