--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,20 +1,21 @@
 name: release
 
 on:
+  schedule:
+    - cron: '19 3 * * *'
   push:
-    tags: [ '*-*.*' ]
-    
+    branches: [ main, 14-3.3, 15-3.3 ]
+
 env:
-  # Use docker.io for Docker Hub if empty
+  LATEST: '15-3.3'
   REGISTRY: docker.io
-  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-jobs:
+jobs:  
   docker:
     runs-on: ubuntu-latest
     permissions:
@@ -32,34 +33,62 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
       - name: Log into dockerhub
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        id: meta
+      - name: Get branch name
+        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
+      - name: Extract Docker metadata for latest release
+        if: env.BRANCH == env.LATEST
+        id: meta-latest
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
+            latest=true
+          tags: |
+            type=ref,event=branch,enable=true
+            type=schedule,enable=false,pattern=nightly
+            type=ref,event=tag
+            type=ref,event=pr
+
+      - name: Extract Docker metadata for other releases
+        if: env.BRANCH != env.LATEST
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          if: env.BRANCH != env.LATEST
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
             latest=false
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+          tags: |
+            type=ref,event=branch,enable=true
+            type=schedule,enable=false,pattern=nightly
+            type=ref,event=tag
+            type=ref,event=pr
+
+      - name: Build and push Docker image for latest release
+        if: env.BRANCH == env.LATEST
+        uses: docker/build-push-action@v3
+        with:
+          platforms: linux/amd64, linux/arm64/v8, linux/ppc64le
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-latest.outputs.tags }}
+          labels: ${{ steps.meta-latest.outputs.labels }}
+
+      - name: Build and push Docker image for other releases
+        if: env.BRANCH != env.LATEST
         uses: docker/build-push-action@v3
         with:
           platforms: linux/amd64, linux/arm64/v8, linux/ppc64le
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
+ 
   singularity:
     needs: docker
     runs-on: ubuntu-latest
@@ -69,32 +98,30 @@ jobs:
       fail-fast: false
       matrix:
         recipe: ["Singularity"]
-
-    name: Check ${{ matrix.recipe }}
     steps:
-
       - name: Check out code for the container build
         uses: actions/checkout@v3
 
-      - name: Continue if Singularity Recipe Exists
+      - name: Continue if Singularity recipe exists
         run: |
           if [[ -f "${{ matrix.recipe }}" ]]; then
             echo "keepgoing=true" >> $GITHUB_ENV
-          fi          
+          fi
 
-      - name: Get release version
-        run: echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+      - name: Get branch name
+        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-      - name: Build Container
+      - name: Create tag for Singularity
+        if: ${{ env.keepgoing == 'true' }}
         env:
           recipe: ${{ matrix.recipe }}
         run: |
-         ls 
+         ls
          if [ -f "${{ matrix.recipe }}" ]; then
             sudo -E singularity build container.sif ${{ matrix.recipe }}
             tag=$(echo "${recipe/Singularity\./}")
             if [ "$tag" == "Singularity" ]; then
-                tag=$TAG
+                tag=$BRANCH
             fi
             # Build the container and name by tag
             echo "Tag is $tag."
@@ -105,12 +132,25 @@ jobs:
            ls
          fi
 
+      - name: Update Singularity file tag
+        run: |
+          sed -i "s/latest/$tag/" ./Singularity
+
       - name: Login and Deploy Container
-        #if: (github.event_name != 'pull_request')
         env:
           keepgoing: ${{ env.keepgoing }}
         run: |         
             if [[ "${keepgoing}" == "true" ]]; then
                 echo ${{ secrets.GITHUB_TOKEN }} | singularity remote login -u ${{ secrets.GHCR_USERNAME }} --password-stdin oras://ghcr.io
                 singularity push container.sif oras://ghcr.io/${GITHUB_REPOSITORY}:${tag}
+            fi
+
+      - name: Login and Deploy Latest Container
+        if: env.BRANCH == env.LATEST
+        env:
+          keepgoing: ${{ env.keepgoing }}
+        run: |
+            if [[ "${keepgoing}" == "true" ]]; then
+                echo ${{ secrets.GITHUB_TOKEN }} | singularity remote login -u ${{ secrets.GHCR_USERNAME }} --password-stdin oras://ghcr.io
+                singularity push container.sif oras://ghcr.io/${GITHUB_REPOSITORY}:latest
             fi
