--- a/.github/workflows/build-pgpool.yml
+++ b/.github/workflows/build-pgpool.yml
@@ -1,13 +1,10 @@
-name: release
+name: build-pgpool
 
 on:
-  schedule:
-    - cron: '19 3 * * *'
-  push:
-    branches: [ main, 14-3.3, 15-3.3 ]
+  pull_request:
+    branches: [ main ]
 
 env:
-  LATEST: '15-3.3'
   REGISTRY: docker.io
   IMAGE_NAME: ${{ github.repository }}
 
@@ -15,7 +12,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-jobs:  
+jobs:
   docker:
     runs-on: ubuntu-latest
     permissions:
@@ -33,56 +30,24 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log into dockerhub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Get branch name
-        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
-
-      - name: Extract Docker metadata for latest release
-        if: env.BRANCH == env.LATEST
-        id: meta-latest
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          flavor: |
-            latest=true
-          tags: |
-            type=ref,event=branch,enable=true
-            type=schedule,enable=false,pattern=nightly
-            type=ref,event=tag
-            type=ref,event=pr
-
-      - name: Extract Docker metadata for other releases
-        if: env.BRANCH != env.LATEST
+      - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=false
+            suffix=-pgpool
           tags: |
             type=ref,event=branch,enable=true
             type=schedule,enable=false,pattern=nightly
             type=ref,event=tag
             type=ref,event=pr
 
-      - name: Build and push Docker image for latest release
-        if: env.BRANCH == env.LATEST
+      - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64, linux/arm64/v8, linux/ppc64le
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-latest.outputs.tags }}
-          labels: ${{ steps.meta-latest.outputs.labels }}
-
-      - name: Build and push Docker image for other releases
-        if: env.BRANCH != env.LATEST
-        uses: docker/build-push-action@v3
-        with:
+          file: Dockerfile.pgpool
           platforms: linux/amd64, linux/arm64/v8, linux/ppc64le
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
@@ -131,25 +96,3 @@ jobs:
            ls
          fi
 
-      - name: Update Singularity file tag
-        run: |
-          sed -i "s/latest/$tag/" ./Singularity
-
-      - name: Login and Deploy Container
-        env:
-          keepgoing: ${{ env.keepgoing }}
-        run: |         
-            if [[ "${keepgoing}" == "true" ]]; then
-                echo ${{ secrets.GITHUB_TOKEN }} | singularity remote login -u ${{ secrets.GHCR_USERNAME }} --password-stdin oras://ghcr.io
-                singularity push container.sif oras://ghcr.io/${GITHUB_REPOSITORY}:${tag}
-            fi
-
-      - name: Login and Deploy Latest Container
-        if: env.BRANCH == env.LATEST
-        env:
-          keepgoing: ${{ env.keepgoing }}
-        run: |
-            if [[ "${keepgoing}" == "true" ]]; then
-                echo ${{ secrets.GITHUB_TOKEN }} | singularity remote login -u ${{ secrets.GHCR_USERNAME }} --password-stdin oras://ghcr.io
-                singularity push container.sif oras://ghcr.io/${GITHUB_REPOSITORY}:latest
-            fi
